argocd/k3s/apps/application/dawarich/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
  labels:
    app: dawarich
    app.kubernetes.io/name: dawarich
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dawarich
    app.kubernetes.io/component: web
